--- a/data/login_config.json
+++ b/data/login_config.json
@@ -1,7 +1,7 @@
 {
     "login": {
-        "url": "https://demowebsite/login",
-        "email": "demousername",
-        "password": "demopassword"
+        "url": "",
+        "email": "",
+        "password": ""
     }
 }
