API Testing Added

--- a/data/login_config.json
+++ b/data/login_config.json
@@ -3,5 +3,9 @@
         "url": "",
         "email": "",
         "password": ""
+    },
+    "api": {
+        "base_url": "",
+        "timeout": 30000
     }
 }
