--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,38 @@
 [pytest]
+# Test discovery
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+
+# Test paths
+testpaths = tests
+
+# Logging
 log_cli = true
 log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)8s] %(name)s: %(message)s
+log_cli_date_format = %Y-%m-%d %H:%M:%S
+
+# Markers
+markers =
+    ui: UI/Browser tests
+    api: API tests  
+    integration: Integration tests (UI + API)
+    smoke: Smoke tests
+    regression: Regression tests
+    slow: Slow running tests
+
+# Warnings
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
+
+# Additional options
+addopts = 
+    --strict-markers
+    --verbose
+    --tb=short
+    --maxfail=5
+
+# Minimum version
+minversion = 6.0
